# ComfyUI-Prompt-Manager

./: .gitignore  README.md  __init__.py  apply_lora_stack.py  check_loaders.py  default_prompts.json  latent_preview.py  model_manager.py  prompt_apply_lora.py  prompt_extractor.py  prompt_generator.py  prompt_generator_options.py  prompt_manager.py  prompt_manager_advanced.py  pyproject.toml  requirements.txt  save_video_h26x.py  switch_any.py
docs/: changelog.md  comfyui-tab-persistence.md  feature-reference.md
example_workflows/: generator_workflow.json  recipe_builder_Lora_manager.json  recipe_builder_advanced.json  recipe_builder_dual_model.json  recipe_builder_simple-hirez.json  recipe_builder_simple.json  recipe_builder_single_model.json  wan_workflow.json  workflow_builder_Lora_manager.json  workflow_builder_advanced.json  workflow_builder_simple-hirez.json  workflow_builder_simple.json
js/: file_browser.js  latent_preview.js  multi_lora_stacker_lm.js  path_browser.js  prompt_extractor.js  prompt_manager.js  prompt_manager_advanced.js  prompt_model_loader.js  recipe_builder.js  recipe_model_loader.js  recipe_model_picker.js  recipe_relay.js  recipe_renderer.js  switch_any.js  video_metadata.js  workflow_builder.js  workflow_context.js  workflow_extractor.js  workflow_generator.js  workflow_manager.js  workflow_model_loader.js  workflow_renderer.js  workflow_saver.js
nodes/: apply_lora.py  multi_inputs.py  multi_lora_stacker.py  multi_lora_stacker_lm.py  multi_prompt.py  prompt_apply_lora.py  prompt_extractor.py  prompt_generator.py  prompt_generator_kill_relay.py  prompt_generator_kill_switch.py  prompt_generator_options.py  prompt_manager.py  prompt_manager_adv.py  prompt_manager_advanced.py  prompt_manager_basic.py  prompt_model_loader.py  recipe_builder.py  recipe_manager.py  recipe_model_loader.py  recipe_model_picker.py  recipe_multi_prompt.py  recipe_relay.py  recipe_renderer.py  test_render.py  workflow_bridge.py  workflow_builder.py  workflow_context.py  workflow_extractor.py  workflow_generator.py  workflow_get_model.py  workflow_manager.py  workflow_model_loader.py  workflow_relay.py  workflow_renderer.py  workflow_saver.py
prompts/: json_system_prompt.txt  json_system_prompt_audio.txt  json_system_prompt_image.txt  json_system_prompt_video.txt  text_audio_system_prompt.txt  text_video_system_prompt.txt
py/: convert_to_api.py  lora_utils.py  model_manager.py  ollama_wrapper.py  workflow_data_utils.py  workflow_executor.py  workflow_extraction_utils.py  workflow_extractor_utils.py  workflow_families.py  workflow_node_utils.py
tests/: check_png.py  cleanup_input.py  comfyui-tab-persistence.md  (+10 more)
(+24 files in other folders)
