[project]
name = "comfyui-prompt-manager"
description = "Prompt Manager for ComfyUI, with llama.cpp integration for prompt generation. Allowing users to generate and save prompts."
version = "1.5.1"

[project.urls]
Repository = "https://github.com/FranckyB/ComfyUI-Prompt-Manager"

[tool.comfy]
PublisherId = "FranckyB"
DisplayName = "ComfyUI-Prompt-Manager"
