[project]
name = "comfyui-prompt-manager"
description = "Prompt Manager for ComfyUI, with llama.cpp integration for prompt generation and vision analysis. Organize, generate, and save prompts with local LLM support."
version = "1.8.2"

[project.urls]
Repository = "https://github.com/FranckyB/ComfyUI-Prompt-Manager"

[tool.comfy]
PublisherId = "FranckyB"
DisplayName = "ComfyUI-Prompt-Manager"
